package com.playground.domain.model.deadline.value;

import java.time.LocalDateTime;

public record DueDate(LocalDateTime value) {}
