package com.playground.domain.model.deadline.value;

public record MaxPostponeCount(int value) {}
