package com.playground.domain.model.deadline.value;

public record PostponeCount(int value) {}
