package com.playground.domain.model.task.value;

public record TaskId(String value) {}
