package com.playground.domain.model.task.value;

public record TaskName(String value) {}
